# rapp-robot-nao

./: .gitignore  CMakeLists.txt  README.md  package.xml
cloud_services/: CMakeLists.txt  package.xml
cloud_services/include/cloud_services/: find_objects.hpp
cloud_services/launch/: cloud_services.launch
cloud_services/src/: find_objects.cpp  find_objects_node.cpp  light_check_node.cpp  upload_image_node.cpp
cloud_services/srv/: FindObjects.srv
rapp_api/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rapp_api/include/rapp_api/: CloudServices.h  DAInit.h  NaoCommunication.h  NaoDAStatus.h  NaoNavigation.h  NaoSendEmail.h  NaoSendEmail.h~  NaoVision.h  NaoVision.h~
rapp_api/src/: CloudServices.cpp  DAInit.cpp  NaoCommunication.cpp  NaoDAStatus.cpp  NaoNavigation.cpp  NaoSendEmail.cpp  NaoVision.cpp
rapp_api_nao/: CMakeLists.txt  package.xml
rapp_api_nao/src/: Communication.cpp  CommunicationImpl.cpp  CommunicationImpl.hpp  Navigation.cpp  NavigationImpl.cpp  NavigationImpl.hpp  Vision.cpp  VisionImpl.cpp  VisionImpl.hpp
rapp_api_nao/src/communication/: CommunicationImpl.cpp  CommunicationImpl.hpp  communication.cpp
rapp_api_nao/src/navigation/: NavigationImpl.cpp  NavigationImpl.hpp  navigation.cpp
rapp_api_nao/src/vision/: VisionImpl.cpp  VisionImpl.hpp  vision.cpp
rapp_core_agent/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rapp_core_agent/cfg/: applications.yaml
rapp_core_agent/launch/: core_agent.launch  core_agent_tests.launch  core_agent_tests.launch~  fake_store.launch  launch_whole_core_agent.launch
rapp_core_agent/nodes/: fake_nao_comm.py  fake_store.py  store_interactions.py
rapp_core_agent/nodes/rapp_email/: acore_email_client.py  acore_email_client.py~  acore_email_server.py  acore_email_server.py~
rapp_core_agent/nodes/rapp_vision/: acore_camera_client.py  acore_camera_server.py  acore_photo_capture_client.py  acore_photo_capture_server.py  adyn_qrcode_server.py
rapp_core_agent/src/: core_agent.cpp  core_agent.cpp~
rapp_core_agent/srv/: DynamicAgentStatus.srv  GetImage.srv  StoreList.srv
rapp_dynamic_agent/: CMakeLists.txt  package.xml  test.txt
rapp_dynamic_agent/data/: email_address.txt  email_address.txt~
rapp_dynamic_agent/launch/: dynamic_agent_tests.launch
rapp_dynamic_agent/scripts/rapp_email/: adynamic_email_client.py~
rapp_map/: CMakeLists.txt  (+1 more)
rapp_robot_agent/: CMakeLists.txt  package.xml
rapp_robot_agent/config/: rviz_config.rviz
rapp_robot_agent/config/costmap_2d_launch/: example_params.yaml  example_params.yaml~  nao_costmap_params.yaml~
rapp_robot_agent/config/global_planner_launch/: planner_launch.launch
rapp_robot_agent/launch/: core_agent_camera_server.launch  dyn_agent_camera+qrcode_server+hazard_qrcode.launch  dyn_agent_camera+qrcode_server.launch  dyn_agent_follow_marker.launch  dyn_agent_hazard_qrcode_client.launch  dyn_agent_qrcode_server+hazard_qrcode.launch
rapp_robot_agent/launch/communication/: core_agent_communication.launch
rapp_robot_agent/launch/navigation/: core_agent_move.launch~  core_agent_moveVel.launch~  dyn_agent_follow_QR.launch  dyn_agent_follow_marker.launch  full_navigation_agent.launch  wizualizacja.launch
rapp_robot_agent/launch/vision/: core_agent_camera_server.launch  dyn_agent_hazard_qrcode_server.launch  dyn_agent_qrcode_server.launch
rapp_robot_agent/nodes/rapp_communication/: acore_communication_server.py
rapp_robot_agent/nodes/rapp_email/: acore_email_client.py  acore_email_client.py~  acore_email_server.py  adynamic_email_client.py
rapp_robot_agent/nodes/rapp_navigation/: acore_estimator_server.py  acore_follow_marker_server.py  acore_keyboard.py  acore_moveTo_server.py  acore_moveVel_server.py  acore_move_server.py  acore_nav_server.py  adyn_follow_marker_client.py
rapp_robot_agent/nodes/rapp_vision/: acore_camera_client.py  acore_camera_server.py  acore_learn_face_server.py  acore_recognize_faces_client.py  acore_recognize_faces_server.py  acore_textToSpeech.py  acore_transform_server.py  adyn_hazard_qrcode_client.py  adyn_hazard_qrcode_server.py  adyn_qrcode_client.py  adyn_qrcode_server.py
rapp_robot_agent/srv/: DetectQRcodes.srv  GetPlan.srv  LookAtPoint.srv  MoveVel.srv  RecordWithSoundDetection.srv  Say.srv  SendEmail.srv  VisOdom.srv  VoiceRecord.srv
rapp_ros_naoqi_wrappings/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rapp_ros_naoqi_wrappings/launch/: core_agent_full.launch  core_agent_tests.launch
rapp_ros_naoqi_wrappings/launch/communication/: core_agent_communication.launch
rapp_ros_naoqi_wrappings/launch/navigation/: core_agent_estimator.launch  core_agent_keyboard.launch  core_agent_move.launch  core_agent_moveVel.launch  core_agent_moveVel.launch~  dyn_agent_follow_QR.launch  dyn_agent_follow_marker.launch  full_navigation_agent.launch  nao_ekf.launch
rapp_ros_naoqi_wrappings/launch/vision/: core_recognize_faces_client.launch  core_recognize_faces_server.launch
rapp_ros_naoqi_wrappings/msg/: MatrixRot.msg  obstacleData.msg
rapp_ros_naoqi_wrappings/nodes/rapp_communication/: acore_communication_server.py
rapp_ros_naoqi_wrappings/nodes/rapp_email/: acore_email_client.py  acore_email_client.py~  acore_email_server.py  acore_email_server.py~
rapp_ros_naoqi_wrappings/nodes/rapp_navigation/: acore_estimator_server.py  acore_execution_server.py  acore_move_server.py  acore_obstacle_server.py  acore_state_server.py  acore_transform_server.py  adyn_follow_QR_client.py~  (+2 more)
rapp_ros_naoqi_wrappings/srv/: FaceDetect.srv  FollowMarker.srv  GetImage.srv  GetRobotPose.srv  LearnFace.srv  LookAtPoint.srv  MicrophoneEnergy.srv  MoveAlongPath.srv  MoveGetCollisionStatus.srv  MoveJoint.srv  MoveStop.srv  MoveTo.srv  MoveVel.srv  PlannPath.srv  PlayAudio.srv  Record.srv  RemoveStiffness.srv  Rest.srv  Say.srv  SetCameraParam.srv  SetCameraParams.srv  SetGlobalPose.srv  TakePredefinedPosture.srv  TriggerStiffness.srv  UpdatePose.srv
ros_packages/helloworld/: CMakeLists.txt  CMakeLists.txt~  package.xml
ros_packages/rapp/: CMakeLists.txt  package.xml
ros_packages/voicemail/: CMakeLists.txt
(+176 files in other folders)
